# SOFF

./: .gitignore  Dockerfile  HCCR.ipynb  LICENSE  README.md  init_raw_dataset.py  pyproject.toml  requirements.txt  run.sh  run_with_setsid.sh  runconfig.txt
age/: age-federated-dp.py  age-federated-smc.py  age-federated.py  age.py  data.py  preprocess.py  preprocess.sh  requirements.txt  run_baseline.sh  run_dp.sh  train_comm_cost.sh
alphanumeric/: dataset.py  requirements.txt  train.py  train_comm_cost.sh  train_dp.sh  train_fedavg.sh
chinese/: dataset.py  preprocess.sh  requirements.txt  train.py  train_comm_cost.sh  train_dp.sh  train_fedavg.sh  train_smc.sh
chinese/data/: preprocess.py
examples/baselines/: async-fedavg-mlp-mnist.sh  decentralized-fedavg-hybridcnnlstm-abchina.sh  decentralized-fedavg-mlp-mnist.sh  fedavg-hybridcnnlstm-abchina.sh  fedavg-mlp-mnist-with-rdp.sh  (+6 more)
face/: model.py  preprocess_equal.py  readme.txt  train_comm_cost.sh  train_dp.sh  verify.py
game/: preprocess.sh  readme.txt  train_align.py
hccr/: hccr.py  run.sh
movie/: preprocess.sh  requirements.txt  train.py  train.sh  train_fed.py  train_fed.sh
sentiment/: preprocess.py  preprocess.sh  requirements.txt  run.sh  sentiment-dp.py  sentiment-federated-dp.py  sentiment-federated-simulated-dp.py  sentiment-federated-simulated.py  sentiment-federated-smc.py  sentiment.py  train_comm_cost.sh  train_dp.sh
songs/: data.py  preprocess.py  preprocess.sh  requirements.txt  run_baseline.sh  songs-federated.py
traffic/: preprocess.sh  requirements.txt  run_demo_pytorch.py  train.sh
(+224 files in other folders)
